--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "devDependencies": {
+    "sqlite3": "^3.0.9"
+  },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -13,6 +16,9 @@
     "express": "~4.13.1",
     "express-partials": "^0.3.0",
     "morgan": "~1.6.1",
+    "pg": "^4.4.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "~3.5.1",
     "serve-favicon": "~2.3.0"
   }
 }
